k8s/lms/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lms-ingress
  namespace: lms
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - lms.infosec.moscow
      secretName: lms-tls
  rules:
    - host: lms.infosec.moscow
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: lms-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lms-frontend
                port:
                  number: 80
